# autoclic

./: LICENSE  README.md  autoclic.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: build-release.yml
autoclic/: .gitattributes  index.d.ts  index.js  package-lock.json  package.json
autoclic-app/: README.md  electron-builder.yml  package-lock.json  package.json
autoclic-app/autoclic/: Cargo.toml  index.d.ts  index.js  package.json
autoclic-app/autoclic/.github/workflows/: CI.yml
autoclic-app/autoclic/src/: lib.rs
autoclic-app/src/main/: index.js
autoclic-app/src/preload/: index.js
autoclic-app/src/renderer/: index.html
autoclic-app/src/renderer/src/: App.vue
autoclic-app/src/renderer/src/assets/: main.css
autoclic-app/src/renderer/src/components/: ControlButtons.vue  CounterClick.vue  GetMouseButtons.vue  StartButton.vue  StopButton.vue
autoclic/src/: lib.rs
